[package]
name = "webcrawl"
version = "0.1.0"
authors = ["Jacek Całusiński <forger@forger.pl>"]
edition = "2018"

[workspace]

[dependencies]
tokio = "0.1"
log = "0.4"
failure = "0.1"
hyper = "0.12"
env_logger = "0.6"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
clap = "2.33"
url = "1.7"

[dependencies.crawler]
optional = false
path = "crawler"

[dependencies.hashbrown]
version = "0.4"
features = ["serde"]

